--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,14 +1,14 @@
-name: Tests 2023
+# .github/workflows/test.yml
+name: Tests
 
 on:
   push:
-    branches: [ "2023" ]
+    branches: [ "20**" ]
   pull_request:
-    branches: [ "2023" ]
+    branches: [ "20**" ]
 
 jobs:
-
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -18,5 +18,50 @@ jobs:
       with:
         go-version: '1.23'
 
+    - name: Download dependencies
+      run: go mod download
+
+    - name: Fetch Puzzle Inputs
+      if: github.event_name != 'pull_request'
+      run: |
+        # Function to fetch input for a specific day
+        fetch_input() {
+          local year=$1
+          local day=$2
+          local day_padded=$(printf "%02d" $day)
+          local dir="puzzles/day${day_padded}"
+          
+          # Skip if directory doesn't exist
+          if [ ! -d "$dir" ]; then
+            return 0
+          fi
+          
+          # Fetch input only if solution exists
+          if [ -f "${dir}/solution.go" ]; then
+            echo "Fetching input for ${year} day ${day}"
+            curl "https://adventofcode.com/${year}/day/${day}/input" \
+              -H "Cookie: session=${AOC_SESSION}" \
+              -o "${dir}/in.txt"
+            # Add small delay to be nice to AoC servers
+            sleep 1
+          fi
+        }
+        
+        # Get current year from branch name or default to 2023
+        YEAR=${GITHUB_REF#refs/heads/}
+        if [[ ! $YEAR =~ ^20[0-9]{2}$ ]]; then
+          YEAR=2023
+        fi
+        
+        # Fetch inputs for all days that have solutions
+        for day in {1..25}; do
+          fetch_input $YEAR $day
+        done
+      env:
+        AOC_SESSION: ${{ secrets.AOC_SESSION }}
+
     - name: Test
-      run: go test -v ./tests
+      run: go test ./...
+      
+    - name: Run benchmarks
+      run: go test -bench=. -benchmem ./...
