--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,6 +19,7 @@ jobs:
         go-version: '1.23'
 
     - name: Download dependencies
+      working-directory: ./go
       run: go mod download
 
     - name: Fetch Puzzle Inputs
@@ -37,18 +38,23 @@ jobs:
           local year=$1
           local day=$2
           local day_padded=$(printf "%02d" $day)
-          local dir="${year}/day${day_padded}"
+          local solution_dir="go/${year}/day${day_padded}"
+          local data_dir="data/${year}"
+          local data_file="${data_dir}/day${day_padded}.txt"
           local max_retries=3
           local attempt=1
           local retry_delay=1
 
-          # Skip if directory structure is invalid
-          if [ ! -d "$dir" ] || [ ! -f "${dir}/solution.go" ]; then
+          # Skip if directory structure is invalid or solution doesn't exist
+          if [ ! -d "$solution_dir" ] || [ ! -f "${solution_dir}/solution.go" ]; then
             return 0
           fi
 
-          echo "Fetching input for ${year} day ${day} (${dir})"
-          
+          # Create data directory if it doesn't exist
+          mkdir -p "$data_dir"
+
+          echo "Fetching input for ${year} day ${day} (${data_file})"
+
           while [ $attempt -le $max_retries ]; do
             # Use temporary file to capture response
             local tmpfile=$(mktemp)
@@ -57,9 +63,9 @@ jobs:
               "https://adventofcode.com/${year}/day/${day}/input" \
               -o "$tmpfile" \
               --silent --show-error)
-            
+
             if [ $status_code -eq 200 ]; then
-              mv "$tmpfile" "${dir}/in.txt"
+              mv "$tmpfile" "$data_file"
               echo "Successfully fetched input for ${year} day ${day}"
               sleep 1  # Maintain server-friendly delay
               return 0
@@ -77,14 +83,16 @@ jobs:
           return 1
         }
 
-        # Process year directories
-        for dir in *; do
-          if [ -d "$dir" ] && [[ "$dir" =~ ^20[0-9]{2}$ ]]; then
-            year="$dir"
-            echo "Processing year directory: $year"
-            for day in {1..25}; do
-              fetch_input "$year" "$day"
-            done
+        # Process year directories in go/
+        for dir in go/*; do
+          if [ -d "$dir" ]; then
+            year=$(basename "$dir")
+            if [[ "$year" =~ ^20[0-9]{2}$ ]]; then
+              echo "Processing year directory: $year"
+              for day in {1..25}; do
+                fetch_input "$year" "$day"
+              done
+            fi
           fi
         done
 
@@ -97,7 +105,9 @@ jobs:
         AOC_SESSION: ${{ secrets.AOC_SESSION }}
 
     - name: Test
+      working-directory: ./go
       run: go test ./...
-      
+
     - name: Run benchmarks
+      working-directory: ./go
       run: go test -bench=. -benchmem ./...
