--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -11,72 +11,49 @@ on:
   workflow_dispatch:
 
 jobs:
-  discover-python:
+  discover:
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Discover Python solutions
+      - name: Discover all solutions
         id: set-matrix
         run: |
-          solutions=$(find solutions/py -type f -name "main.py" | while read file; do
-            year=$(echo $file | sed -n 's|solutions/py/\([0-9]\{4\}\)/day\([0-9]\{2\}\)/main.py|\1|p')
-            day=$(echo $file | sed -n 's|solutions/py/\([0-9]\{4\}\)/day\([0-9]\{2\}\)/main.py|\2|p')
-            # Remove leading zeros from day
-            day=$((10#$day))
-            echo "{\"year\":\"$year\",\"day\":\"$day\"}"
-          done | jq -s -c '.')
-          echo "matrix=$solutions" >> $GITHUB_OUTPUT
-          echo "Found solutions: $solutions"
+          solutions=$(
+            # Python solutions
+            find solutions/py -type f -name "main.py" | while read file; do
+              year=$(echo $file | sed -n 's|solutions/py/\([0-9]\{4\}\)/day\([0-9]\{2\}\)/main.py|\1|p')
+              day=$(echo $file | sed -n 's|solutions/py/\([0-9]\{4\}\)/day\([0-9]\{2\}\)/main.py|\2|p')
+              day=$((10#$day))
+              echo "{\"lang\":\"py\",\"target\":\"pypy\",\"year\":\"$year\",\"day\":\"$day\"}"
+            done
+            # Go solutions
+            find solutions/go -type f -name "main.go" | while read file; do
+              year=$(echo $file | sed -n 's|solutions/go/\([0-9]\{4\}\)/day\([0-9]\{2\}\)/main.go|\1|p')
+              day=$(echo $file | sed -n 's|solutions/go/\([0-9]\{4\}\)/day\([0-9]\{2\}\)/main.go|\2|p')
+              day=$((10#$day))
+              echo "{\"lang\":\"go\",\"target\":\"go\",\"year\":\"$year\",\"day\":\"$day\"}"
+            done
+            # TypeScript solutions
+            find solutions/ts -type f -name "index.ts" | while read file; do
+              year=$(echo $file | sed -n 's|solutions/ts/\([0-9]\{4\}\)/day\([0-9]\{2\}\)/index.ts|\1|p')
+              day=$(echo $file | sed -n 's|solutions/ts/\([0-9]\{4\}\)/day\([0-9]\{2\}\)/index.ts|\2|p')
+              day=$((10#$day))
+              echo "{\"lang\":\"ts\",\"target\":\"bun\",\"year\":\"$year\",\"day\":\"$day\"}"
+            done
+          )
+          matrix=$(echo "$solutions" | jq -s -c '.')
+          echo "matrix=$matrix" >> $GITHUB_OUTPUT
+          echo "Found solutions: $matrix"
 
-  discover-go:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Discover Go solutions
-        id: set-matrix
-        run: |
-          solutions=$(find solutions/go -type f -name "main.go" | while read file; do
-            year=$(echo $file | sed -n 's|solutions/go/\([0-9]\{4\}\)/day\([0-9]\{2\}\)/main.go|\1|p')
-            day=$(echo $file | sed -n 's|solutions/go/\([0-9]\{4\}\)/day\([0-9]\{2\}\)/main.go|\2|p')
-            # Remove leading zeros from day
-            day=$((10#$day))
-            echo "{\"year\":\"$year\",\"day\":\"$day\"}"
-          done | jq -s -c '.')
-          echo "matrix=$solutions" >> $GITHUB_OUTPUT
-          echo "Found solutions: $solutions"
-
-  discover-ts:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Discover TypeScript solutions
-        id: set-matrix
-        run: |
-          solutions=$(find solutions/ts -type f -name "index.ts" | while read file; do
-            year=$(echo $file | sed -n 's|solutions/ts/\([0-9]\{4\}\)/day\([0-9]\{2\}\)/index.ts|\1|p')
-            day=$(echo $file | sed -n 's|solutions/ts/\([0-9]\{4\}\)/day\([0-9]\{2\}\)/index.ts|\2|p')
-            # Remove leading zeros from day
-            day=$((10#$day))
-            echo "{\"year\":\"$year\",\"day\":\"$day\"}"
-          done | jq -s -c '.')
-          echo "matrix=$solutions" >> $GITHUB_OUTPUT
-          echo "Found solutions: $solutions"
-
-  bench-python:
-    needs: discover-python
+  bench:
+    needs: discover
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        py: ${{ fromJson(needs.discover-python.outputs.matrix) }}
+        solution: ${{ fromJson(needs.discover.outputs.matrix) }}
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
@@ -86,68 +63,18 @@ jobs:
         with:
           version: latest
 
-      - name: Run benchmark for Python ${{ matrix.py.year }} day ${{ matrix.py.day }}
-        run: earthly --ci --output --secret AOC_SESSION="${{ secrets.AOC_SESSION }}" +pypy --year=${{ matrix.py.year }} --day=${{ matrix.py.day }}
+      - name: Run benchmark for ${{ matrix.solution.lang }} ${{ matrix.solution.year }} day ${{ matrix.solution.day }}
+        run: earthly --ci --output --secret AOC_SESSION="${{ secrets.AOC_SESSION }}" +${{ matrix.solution.target }} --year=${{ matrix.solution.year }} --day=${{ matrix.solution.day }}
 
       - name: Upload result
         uses: actions/upload-artifact@v4
         with:
-          name: benchmark-py-${{ matrix.py.year }}-${{ matrix.py.day }}
-          path: results/
-          retention-days: 1
-
-  bench-go:
-    needs: discover-go
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go: ${{ fromJson(needs.discover-go.outputs.matrix) }}
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Earthly
-        uses: earthly/actions/setup-earthly@v1
-        with:
-          version: latest
-
-      - name: Run benchmark for Go ${{ matrix.go.year }} day ${{ matrix.go.day }}
-        run: earthly --ci --output --secret AOC_SESSION="${{ secrets.AOC_SESSION }}" +go --year=${{ matrix.go.year }} --day=${{ matrix.go.day }}
-
-      - name: Upload result
-        uses: actions/upload-artifact@v4
-        with:
-          name: benchmark-go-${{ matrix.go.year }}-${{ matrix.go.day }}
-          path: results/
-          retention-days: 1
-
-  bench-typescript:
-    needs: discover-ts
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        ts: ${{ fromJson(needs.discover-ts.outputs.matrix) }}
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Earthly
-        uses: earthly/actions/setup-earthly@v1
-        with:
-          version: latest
-
-      - name: Run benchmark for TypeScript ${{ matrix.ts.year }} day ${{ matrix.ts.day }}
-        run: earthly --ci --output --secret AOC_SESSION="${{ secrets.AOC_SESSION }}" +bun --year=${{ matrix.ts.year }} --day=${{ matrix.ts.day }}
-
-      - name: Upload result
-        uses: actions/upload-artifact@v4
-        with:
-          name: benchmark-ts-${{ matrix.ts.year }}-${{ matrix.ts.day }}
+          name: benchmark-${{ matrix.solution.lang }}-${{ matrix.solution.year }}-${{ matrix.solution.day }}
           path: results/
           retention-days: 1
 
   merge-benchmarks:
-    needs: [bench-python, bench-go, bench-typescript]
+    needs: bench
     runs-on: ubuntu-latest
     if: always()
     steps:
